# BI_mcp

./: README.md  __init__.py  __main__.py  introspect_server.py  pyproject.toml  resources.py  run_server.py  server.py  test_quick.py  test_server.py  tools.py  utils.py  verify_flavour_conv.py
bayesinference_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: stan_bi_examples.json  stan_semantics.yaml
